[feat] - add dependency